--- a/questions.ipynb
+++ b/questions.ipynb
@@ -6,9 +6,9 @@
    "source": [
     "# TP NoSQL\n",
     "\n",
-    "Prénom :\n",
+    "Prénom : Bastien\n",
     "\n",
-    "Nom : \n",
+    "Nom : Ebely\n",
     "\n",
     "Pour ce TP noté vous avez à trois heures pour le réaliser et 48 heures pour le finir si besoin. Le rendu final est attendu pour dimanche 29 septembre 2024 à 23 h 59.\n",
     "\n",
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,14 +27,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collections:  ['restaurants', 'airbnb']\n"
+     ]
+    }
+   ],
    "source": [
     "import pymongo\n",
     "import pandas as pd\n",
     "\n",
-    "URI = 'MONGO CONNEXTION STRING TO REPLACE'\n",
+    "URI = 'mongodb+srv://mongo_user:ampy32aDu7sV7Jyh@cluster0.hz5az.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'\n",
     "client = pymongo.MongoClient(URI)\n",
     "db = client.tp\n",
     "\n",
@@ -51,10 +59,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "il y a 5555 logements dans la base de données\n"
+     ]
+    }
+   ],
+   "source": [
+    "nblogements = db.airbnb.count_documents({})\n",
+    "print(f\"il y a {nblogements} logements dans la base de données\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -65,10 +84,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "voici le prix moyen par ville par prix décroissant\n",
+      "             _id                           prix_moyen\n",
+      "0      Hong Kong  773.7866666666666666666666666666667\n",
+      "1         Brazil  525.3465346534653465346534653465347\n",
+      "2          China  405.3684210526315789473684210526316\n",
+      "3         Turkey  368.1467473524962178517397881996974\n",
+      "4      Australia  197.8065573770491803278688524590164\n",
+      "5  United States  185.7692307692307692307692307692308\n",
+      "6          Spain  100.8262243285939968404423380726698\n",
+      "7         Canada  100.1171032357473035439137134052388\n",
+      "8       Portugal  69.18198198198198198198198198198198\n"
+     ]
+    }
+   ],
+   "source": [
+    "prix_moyen_par_ville = db.airbnb.aggregate([\n",
+    "    {\"$group\": {\"_id\": \"$address.country\", \"prix_moyen\": {\"$avg\": \"$price\"}}},\n",
+    "    {\"$sort\": {\"prix_moyen\": -1}} \n",
+    "])\n",
+    "print(f'voici le prix moyen par ville par prix décroissant')\n",
+    "print(pd.DataFrame(list(prix_moyen_par_ville)))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -79,10 +123,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "voici tout les équipements qui existent : ['', '24-hour check-in', 'Accessible-height bed', 'Accessible-height toilet', 'Air conditioning', 'Air purifier', 'Alfresco shower', 'BBQ grill', 'Baby bath', 'Baby monitor', 'Babysitter recommendations', 'Balcony', 'Bath towel', 'Bathroom essentials', 'Bathtub', 'Bathtub with bath chair', 'Beach chairs', 'Beach essentials', 'Beach view', 'Beachfront', 'Bed linens', 'Bedroom comforts', 'Bicycle', 'Bidet', 'Body soap', 'Boogie boards', 'Breakfast', 'Breakfast bar', 'Breakfast table', 'Building staff', 'Buzzer/wireless intercom', 'Cable TV', 'Carbon monoxide detector', 'Cat(s)', 'Ceiling fan', 'Central air conditioning', 'Changing table', \"Chef's kitchen\", 'Children’s books and toys', 'Children’s dinnerware', 'Cleaning before checkout', 'Coffee maker', 'Convection oven', 'Cooking basics', 'Crib', 'DVD player', 'Day bed', 'Dining area', 'Disabled parking spot', 'Dishes and silverware', 'Dishwasher', 'Dog(s)', 'Doorman', 'Double oven', 'Dryer', 'EV charger', 'Electric profiling bed', 'Elevator', 'En suite bathroom', 'Espresso machine', 'Essentials', 'Ethernet connection', 'Extra pillows and blankets', 'Family/kid friendly', 'Fax machine', 'Fire extinguisher', 'Fireplace guards', 'Firm mattress', 'First aid kit', 'Fixed grab bars for shower', 'Fixed grab bars for toilet', 'Flat path to front door', 'Formal dining area', 'Free parking on premises', 'Free street parking', 'Full kitchen', 'Game console', 'Garden or backyard', 'Gas oven', 'Ground floor access', 'Gym', 'Hair dryer', 'Handheld shower head', 'Hangers', 'Heated towel rack', 'Heating', 'High chair', 'Home theater', 'Host greets you', 'Hot tub', 'Hot water', 'Hot water kettle', 'Ice Machine', 'Indoor fireplace', 'Internet', 'Iron', 'Ironing Board', 'Kayak', 'Keypad', 'Kitchen', 'Kitchenette', 'Lake access', 'Laptop friendly workspace', 'Lock on bedroom door', 'Lockbox', 'Long term stays allowed', 'Luggage dropoff allowed', 'Memory foam mattress', 'Microwave', 'Mini fridge', 'Mountain view', 'Murphy bed', 'Netflix', 'Other', 'Other pet(s)', 'Outdoor parking', 'Outdoor seating', 'Outlet covers', 'Oven', 'Pack ’n Play/travel crib', 'Paid parking off premises', 'Paid parking on premises', 'Parking', 'Patio or balcony', 'Permit parking', 'Pets allowed', 'Pets live on this property', 'Pillow-top mattress', 'Pocket wifi', 'Pool', 'Pool with pool hoist', 'Private bathroom', 'Private entrance', 'Private hot tub', 'Private living room', 'Private pool', 'Rain shower', 'Refrigerator', 'Roll-in shower', 'Room-darkening shades', 'Safe', 'Safety card', 'Sauna', 'Self check-in', 'Shampoo', 'Shared pool', 'Shower chair', 'Single level home', 'Ski-in/Ski-out', 'Smart TV', 'Smart lock', 'Smoke detector', 'Smoking allowed', 'Snorkeling equipment', 'Sonos sound system', 'Sound system', 'Stair gates', 'Standing valet', 'Step-free access', 'Stove', 'Suitable for events', 'Sun loungers', 'Swimming pool', 'TV', 'Table corner guards', 'Tennis court', 'Terrace', 'Toaster', 'Toilet paper', 'Walk-in shower', 'Warming drawer', 'Washer', 'Washer / Dryer', 'Waterfront', 'Well-lit path to entrance', 'Wheelchair accessible', 'Wide clearance to bed', 'Wide clearance to shower', 'Wide doorway', 'Wide entryway', 'Wide hallway clearance', 'Wifi', 'Window guards', 'toilet', 'translation missing: en.hosting_amenity_49', 'translation missing: en.hosting_amenity_50']\n"
+     ]
+    }
+   ],
+   "source": [
+    "equipements = db.airbnb.distinct(\"amenities\")\n",
+    "print(f'voici tout les équipements qui existent : {equipements}')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -93,10 +148,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "il y a 5337 propriétés qui ont le wifi\n"
+     ]
+    }
+   ],
+   "source": [
+    "wifi = db.airbnb.count_documents({\"amenities\": {\"$in\": [\"Wifi\", \"Internet\"]}})\n",
+    "print(f\"il y a {wifi} propriétés qui ont le wifi\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -107,10 +173,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "voici le nom des logements et leurs nombres de chambres et de lits\n",
+      "                                                  name  bedrooms  beds\n",
+      "0                          Apt Linda Vista Lagoa - Rio       1.0   1.0\n",
+      "1                   Ótimo Apto proximo Parque Olimpico       2.0   2.0\n",
+      "2                       Modern Spacious 1 Bedroom Loft       1.0   2.0\n",
+      "3     Ligne verte - à 15 min de métro du centre ville.       0.0   1.0\n",
+      "4                              Ribeira Charming Duplex       3.0   5.0\n",
+      "...                                                ...       ...   ...\n",
+      "5550     Estudio en el casco antiguo. Alquiler mensual       0.0   3.0\n",
+      "5551  Qto Aconchegante no em frente ao Parque Olímpico       1.0   1.0\n",
+      "5552                  StayIN Oporto Música - Apartment       8.0   8.0\n",
+      "5553                                      Quarto Legal       1.0   1.0\n",
+      "5554                                                         1.0   1.0\n",
+      "\n",
+      "[5555 rows x 3 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "logements = db.airbnb.find({}, {\"name\": 1, \"bedrooms\": 1, \"beds\": 1, \"_id\": 0})\n",
+    "print(f'voici le nom des logements et leurs nombres de chambres et de lits')\n",
+    "print(pd.DataFrame(list(logements)))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -121,10 +213,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "voici le nom et le prix des logements à Porto\n",
+      "                                    name   price\n",
+      "0                Ribeira Charming Duplex   80.00\n",
+      "1                      Be Happy in Porto   30.00\n",
+      "2    Downtown Oporto Inn (room cleaning)   40.00\n",
+      "3                         FloresRooms 3T   31.00\n",
+      "4     A Casa Alegre é um apartamento T1.   40.00\n",
+      "..                                   ...     ...\n",
+      "549         Number283 - Your home abroad   48.00\n",
+      "550        Cozy apartment downtown Porto   58.00\n",
+      "551                   Soares Guest House   90.00\n",
+      "552   Central, Modern, University, Metro   41.00\n",
+      "553     StayIN Oporto Música - Apartment  500.00\n",
+      "\n",
+      "[554 rows x 2 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "porto = db.airbnb.find({\"address.market\": \"Porto\"}, {\"name\": 1, \"price\": 1, \"_id\": 0})\n",
+    "print(f'voici le nom et le prix des logements à Porto')\n",
+    "print(pd.DataFrame(list(porto)))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -135,10 +253,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "voici les 5 hôtes les plus populaires\n",
+      "                                                name  nombre_commentaires\n",
+      "0                    #Private Studio - Waikiki Dream                  533\n",
+      "1  Near Airport private room, 2 bedroom granny fl...                  469\n",
+      "2           La Sagrada Familia (and metro) 4 blocks!                  463\n",
+      "3                PRIVATE Room in Spacious, Quiet Apt                  420\n",
+      "4                      traditional and Charming room                  408\n"
+     ]
+    }
+   ],
+   "source": [
+    "hotes = db.airbnb.aggregate([\n",
+    "    {\"$project\": {\"_id\": 0,\"name\": 1,\"nombre_commentaires\": {\"$size\": {\"$ifNull\": [\"$reviews\", []]}}}},\n",
+    "    {\"$sort\": {\"nombre_commentaires\": -1}},\n",
+    "    {\"$limit\": 5}\n",
+    "])\n",
+    "print(f'voici les 5 hôtes les plus populaires')\n",
+    "print(pd.DataFrame(list(hotes)))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -149,10 +289,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "voici les 6 villes ayant le plus de logements disponible\n",
+      "             _id  nombre_logements\n",
+      "0  United States              1222\n",
+      "1         Turkey               661\n",
+      "2         Canada               649\n",
+      "3          Spain               633\n",
+      "4      Australia               610\n",
+      "5         Brazil               606\n"
+     ]
+    }
+   ],
+   "source": [
+    "logement_dispo = db.airbnb.aggregate([\n",
+    "    {\"$group\": {\"_id\" : \"$address.country\", \"nombre_logements\": {\"$sum\": 1}}},\n",
+    "    {\"$sort\": {\"nombre_logements\": -1}},\n",
+    "    {\"$limit\": 6}\n",
+    "])\n",
+    "print(f'voici les 6 villes ayant le plus de logements disponible')\n",
+    "print(pd.DataFrame(list(logement_dispo)))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -163,10 +326,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "il y a 451 propriétés qui acceptent plus de 4 invités et aillant une caution de moins de 300€\n"
+     ]
+    }
+   ],
+   "source": [
+    "invite = db.airbnb.count_documents({\n",
+    "    \"accommodates\": {\"$gt\": 4},\n",
+    "    \"security_deposit\": {\"$lt\": 300}\n",
+    "})\n",
+    "print(f\"il y a {invite} propriétés qui acceptent plus de 4 invités et aillant une caution de moins de 300€\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -177,10 +354,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "voici les 20 utilisateurs qui ont fait le plus de commentaires\n",
+      "         _id  nombre_commentaires\n",
+      "0      David                 1072\n",
+      "1    Michael                  858\n",
+      "2     Daniel                  745\n",
+      "3      Sarah                  723\n",
+      "4      Laura                  665\n",
+      "5       John                  615\n",
+      "6      Chris                  553\n",
+      "7     Andrew                  545\n",
+      "8    Jessica                  515\n",
+      "9       Anna                  503\n",
+      "10     James                  503\n",
+      "11      Alex                  502\n",
+      "12  Jennifer                  475\n",
+      "13      Paul                  472\n",
+      "14      Mark                  452\n",
+      "15     Peter                  447\n",
+      "16      Lisa                  444\n",
+      "17  Michelle                  400\n",
+      "18     Maria                  400\n",
+      "19    Thomas                  396\n"
+     ]
+    }
+   ],
+   "source": [
+    "utilisateurs = db.airbnb.aggregate([\n",
+    "    {\"$unwind\": \"$reviews\"},\n",
+    "    {\"$group\": {\"_id\": \"$reviews.reviewer_name\", \"nombre_commentaires\": {\"$sum\": 1}}},\n",
+    "    {\"$sort\": {\"nombre_commentaires\": -1}},\n",
+    "    {\"$limit\": 20}\n",
+    "])\n",
+    "print(f'voici les 20 utilisateurs qui ont fait le plus de commentaires')\n",
+    "print(pd.DataFrame(list(utilisateurs)))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -191,10 +406,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "la note moyenne des visiteurs des logements à sydney est de :\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'result' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[26], line 6\u001b[0m\n\u001b[0;32m      1\u001b[0m sydney \u001b[38;5;241m=\u001b[39m db\u001b[38;5;241m.\u001b[39mairbnb\u001b[38;5;241m.\u001b[39maggregate([\n\u001b[0;32m      2\u001b[0m     {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m$match\u001b[39m\u001b[38;5;124m\"\u001b[39m: {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124maddress.market\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSydney\u001b[39m\u001b[38;5;124m\"\u001b[39m}},\n\u001b[0;32m      3\u001b[0m     {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m$group\u001b[39m\u001b[38;5;124m\"\u001b[39m: {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_id\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSydney\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnote_moyenne\u001b[39m\u001b[38;5;124m\"\u001b[39m: {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m$avg\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m$review_scores.review_scores_rating\u001b[39m\u001b[38;5;124m\"\u001b[39m}}}\n\u001b[0;32m      4\u001b[0m     ])\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mla note moyenne des visiteurs des logements à sydney est de :\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m----> 6\u001b[0m \u001b[38;5;28mprint\u001b[39m(result[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnote_moyenne\u001b[39m\u001b[38;5;124m'\u001b[39m])\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'result' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "sydney = db.airbnb.aggregate([\n",
+    "    {\"$match\": {\"address.market\": \"Sydney\"}},\n",
+    "    {\"$group\": {\"_id\": \"Sydney\", \"note_moyenne\": {\"$avg\": \"$review_scores.review_scores_rating\"}}}\n",
+    "    ])\n",
+    "print(f'la note moyenne des visiteurs des logements à sydney est de :')\n",
+    "print('note_moyenne'])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -208,7 +449,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "park = db.airbnb.find({\"name\": {\"$regex\": \"park\", \"$options\": \"i\"}}, {\"name\": 1, \"_id\" : 0})\n",
+    "print(f'voici les logements qui contiennent \"park\" dans leur nom') \n",
+    "print(pd.DataFrame(list(park)))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -222,12 +467,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "lat_prix = db.airbnb.find({\n",
+    "    \"address.location.coordinates.1\": {\"$gte\": 36.1, \"$lte\": 40.6},\n",
+    "    \"price\": {\"$gte\": 100, \"$lte\": 200}\n",
+    "}, {\"name\": 1, \"_id\" :0}, )\n",
+    "print(f'voici les logements ayant une lattitude comprise entre 36,1 et 40,6 et un prix entre 100 et 200€') \n",
+    "print(pd.DataFrame(list(lat_prix)))"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -241,9 +493,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
