--- a/questions.ipynb
+++ b/questions.ipynb
@@ -372,8 +372,8 @@
       "6      Chris                  553\n",
       "7     Andrew                  545\n",
       "8    Jessica                  515\n",
-      "9       Anna                  503\n",
-      "10     James                  503\n",
+      "9      James                  503\n",
+      "10      Anna                  503\n",
       "11      Alex                  502\n",
       "12  Jennifer                  475\n",
       "13      Paul                  472\n",
@@ -406,35 +406,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "la note moyenne des visiteurs des logements à sydney est de :\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'result' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[26], line 6\u001b[0m\n\u001b[0;32m      1\u001b[0m sydney \u001b[38;5;241m=\u001b[39m db\u001b[38;5;241m.\u001b[39mairbnb\u001b[38;5;241m.\u001b[39maggregate([\n\u001b[0;32m      2\u001b[0m     {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m$match\u001b[39m\u001b[38;5;124m\"\u001b[39m: {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124maddress.market\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSydney\u001b[39m\u001b[38;5;124m\"\u001b[39m}},\n\u001b[0;32m      3\u001b[0m     {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m$group\u001b[39m\u001b[38;5;124m\"\u001b[39m: {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_id\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSydney\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnote_moyenne\u001b[39m\u001b[38;5;124m\"\u001b[39m: {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m$avg\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m$review_scores.review_scores_rating\u001b[39m\u001b[38;5;124m\"\u001b[39m}}}\n\u001b[0;32m      4\u001b[0m     ])\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mla note moyenne des visiteurs des logements à sydney est de :\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m----> 6\u001b[0m \u001b[38;5;28mprint\u001b[39m(result[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnote_moyenne\u001b[39m\u001b[38;5;124m'\u001b[39m])\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'result' is not defined"
+      "la note moyenne des visiteurs des logements à sydney est de :\n",
+      "93.45567010309279\n"
      ]
     }
    ],
    "source": [
     "sydney = db.airbnb.aggregate([\n",
     "    {\"$match\": {\"address.market\": \"Sydney\"}},\n",
-    "    {\"$group\": {\"_id\": \"Sydney\", \"note_moyenne\": {\"$avg\": \"$review_scores.review_scores_rating\"}}}\n",
-    "    ])\n",
+    "    {\"$group\": {\"_id\": None, \"note_moyenne\": {\"$avg\": \"$review_scores.review_scores_rating\"}}}\n",
+    "])\n",
     "print(f'la note moyenne des visiteurs des logements à sydney est de :')\n",
-    "print('note_moyenne'])"
+    "for result in sydney:\n",
+    "    print(result['note_moyenne'])"
    ]
   },
   {
@@ -446,9 +437,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "voici les logements qui contiennent \"park\" dans leur nom\n",
+      "                                                  name\n",
+      "0    Sydney Hyde Park City Apartment (checkin from ...\n",
+      "1                     UWS Brownstone Near Central Park\n",
+      "2                     Triple room Barcelona Guell park\n",
+      "3                    Park Guell apartment with terrace\n",
+      "4    aOceanside Hawaii Apartment Studio Kitchen Par...\n",
+      "..                                                 ...\n",
+      "161                 Park Slope Private Bed+Livingroom!\n",
+      "162                    Waikiki Condo with Free Parking\n",
+      "163  Sydney Studio in Glebe Close to CBD. SparklinC...\n",
+      "164  1921 15kms from Sydney CBD with Pool Spa parking.\n",
+      "165                  Big 2bdm, Views, WIFI and carpark\n",
+      "\n",
+      "[166 rows x 1 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "park = db.airbnb.find({\"name\": {\"$regex\": \"park\", \"$options\": \"i\"}}, {\"name\": 1, \"_id\" : 0})\n",
     "print(f'voici les logements qui contiennent \"park\" dans leur nom') \n",
@@ -464,9 +477,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "voici les logements ayant une lattitude comprise entre 36,1 et 40,6 et un prix entre 100 et 200€\n",
+      "                                             name\n",
+      "0              Cozy Comfy Suite of Rockaway Beach\n",
+      "1       Coney Island MCU Park Wi fi Cable Apt****\n",
+      "2  Sheepshead Bay, 1-bdr apartment. Close to all!\n"
+     ]
+    }
+   ],
    "source": [
     "lat_prix = db.airbnb.find({\n",
     "    \"address.location.coordinates.1\": {\"$gte\": 36.1, \"$lte\": 40.6},\n",
